--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^3.11.1",
-    "react-navigation-header-buttons": "^3.0.1"
+    "react-navigation-header-buttons": "^3.0.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
