--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-navigation-header-buttons": "^3.0.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-permissions": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
