--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "expo-image-picker": "~8.1.0",
-    "expo-permissions": "~8.1.0"
+    "expo-permissions": "~8.1.0",
+    "expo-file-system": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
