--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "redux-thunk": "^2.3.0",
     "expo-image-picker": "~8.1.0",
     "expo-permissions": "~8.1.0",
-    "expo-file-system": "~8.1.0"
+    "expo-file-system": "~8.1.0",
+    "expo-sqlite": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
