--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "expo-image-picker": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-file-system": "~8.1.0",
-    "expo-sqlite": "~8.1.0"
+    "expo-sqlite": "~8.1.0",
+    "expo-location": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
